// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`buildInvoiceData — snapshot golden (EINV-TEST-014) > snapshot B2C franchise (cas dominant Synclune) > invoice-data-b2c-franchise 1`] = `
{
  "billingAddress": {
    "city": "Paris",
    "countryCode": "FR",
    "line1": "10 rue de la Paix",
    "line2": null,
    "postalCode": "75002",
    "recipientName": "Alice Dupont",
  },
  "buyer": {
    "email": "alice@example.com",
    "firstName": "Alice",
    "lastName": "Dupont",
    "legalName": null,
    "phone": "+33612345678",
    "siret": null,
    "vatNumber": null,
  },
  "currency": "EUR",
  "dueAt": null,
  "formatVersion": 2,
  "invoiceFormat": "PDF",
  "invoiceNumber": "F-2026-00042",
  "issuedAt": 2026-05-27T18:00:00.000Z,
  "lines": [
    {
      "hsCode": null,
      "lineNumber": 1,
      "lineTotalExclTax": 9000,
      "lineTotalInclTax": 9000,
      "productDescription": "Argent 925 oxydé, chaîne 45cm.",
      "productTitle": "Collier Lune d'Argent",
      "quantity": 2,
      "skuCode": "COL-LUN-001",
      "taxAmount": 0,
      "taxCategoryCode": "ZB",
      "taxRate": 0,
      "unitCode": null,
      "unitPriceExclTax": 4500,
      "variantInfo": {
        "color": "Argent",
        "material": "Argent 925",
        "size": null,
      },
    },
  ],
  "meta": {
    "notes": null,
    "orderId": "order-snap-b2c-1",
    "orderNumber": "SYN-2026-0042",
  },
  "payment": {
    "method": "CARD",
    "paidAt": 2026-05-27T18:00:00.000Z,
    "stripeChargeId": null,
    "stripePaymentIntentId": "pi_snap_b2c",
  },
  "precedingInvoice": null,
  "seller": {
    "address": {
      "city": "Nantes",
      "countryCode": "FR",
      "line1": "77 Boulevard du Tertre",
      "line2": null,
      "postalCode": "44100",
      "recipientName": "TADDEI LEANE - Entrepreneur Individuel",
    },
    "apeCode": "47.91B",
    "bankBic": null,
    "bankIban": null,
    "email": "contact@synclune.fr",
    "legalForm": "Entrepreneur individuel",
    "legalName": "TADDEI LEANE - Entrepreneur Individuel",
    "siren": "839183027",
    "siret": "83918302700037",
    "tradeName": "Synclune",
    "vatExemptionText": "TVA non applicable, art. 293 B du CGI",
    "vatNumber": "FR35839183027",
  },
  "shippingAddress": {
    "city": "Paris",
    "countryCode": "FR",
    "line1": "10 rue de la Paix",
    "line2": null,
    "postalCode": "75002",
    "recipientName": "Alice Dupont",
  },
  "totals": {
    "amountDue": 0,
    "shippingExclTax": 500,
    "shippingTax": 0,
    "subtotalExclTax": 9000,
    "taxBreakdown": [
      {
        "categoryCode": "ZB",
        "exemptionReason": "Franchise art. 293 B CGI",
        "rate": 0,
        "taxAmount": 0,
        "taxableAmount": 9500,
      },
    ],
    "totalExclTax": 9500,
    "totalInclTax": 9500,
    "totalPaid": 9500,
    "totalTax": 0,
  },
  "voidedInfo": null,
}
`;

exports[`buildInvoiceData — snapshot golden (EINV-TEST-014) > snapshot avoir (precedingInvoice non null) > invoice-data-credit-note-preceding-ref 1`] = `
{
  "billingAddress": {
    "city": "Paris",
    "countryCode": "FR",
    "line1": "10 rue de la Paix",
    "line2": null,
    "postalCode": "75002",
    "recipientName": "Alice Dupont",
  },
  "buyer": {
    "email": "alice@example.com",
    "firstName": "Alice",
    "lastName": "Dupont",
    "legalName": null,
    "phone": "+33612345678",
    "siret": null,
    "vatNumber": null,
  },
  "currency": "EUR",
  "dueAt": null,
  "formatVersion": 2,
  "invoiceFormat": "PDF",
  "invoiceNumber": "F-2026-00042",
  "issuedAt": 2026-05-27T18:00:00.000Z,
  "lines": [
    {
      "hsCode": null,
      "lineNumber": 1,
      "lineTotalExclTax": 9000,
      "lineTotalInclTax": 9000,
      "productDescription": "Argent 925 oxydé, chaîne 45cm.",
      "productTitle": "Collier Lune d'Argent",
      "quantity": 2,
      "skuCode": "COL-LUN-001",
      "taxAmount": 0,
      "taxCategoryCode": "ZB",
      "taxRate": 0,
      "unitCode": null,
      "unitPriceExclTax": 4500,
      "variantInfo": {
        "color": "Argent",
        "material": "Argent 925",
        "size": null,
      },
    },
  ],
  "meta": {
    "notes": null,
    "orderId": "order-snap-b2c-1",
    "orderNumber": "SYN-2026-0042",
  },
  "payment": {
    "method": "CARD",
    "paidAt": 2026-05-27T18:00:00.000Z,
    "stripeChargeId": null,
    "stripePaymentIntentId": "pi_snap_b2c",
  },
  "precedingInvoice": {
    "invoiceNumber": "F-2026-00042",
    "issuedAt": 2026-05-27T18:00:00.000Z,
    "reason": "Annulation commande (geste commercial)",
  },
  "seller": {
    "address": {
      "city": "Nantes",
      "countryCode": "FR",
      "line1": "77 Boulevard du Tertre",
      "line2": null,
      "postalCode": "44100",
      "recipientName": "TADDEI LEANE - Entrepreneur Individuel",
    },
    "apeCode": "47.91B",
    "bankBic": null,
    "bankIban": null,
    "email": "contact@synclune.fr",
    "legalForm": "Entrepreneur individuel",
    "legalName": "TADDEI LEANE - Entrepreneur Individuel",
    "siren": "839183027",
    "siret": "83918302700037",
    "tradeName": "Synclune",
    "vatExemptionText": "TVA non applicable, art. 293 B du CGI",
    "vatNumber": "FR35839183027",
  },
  "shippingAddress": {
    "city": "Paris",
    "countryCode": "FR",
    "line1": "10 rue de la Paix",
    "line2": null,
    "postalCode": "75002",
    "recipientName": "Alice Dupont",
  },
  "totals": {
    "amountDue": 0,
    "shippingExclTax": 500,
    "shippingTax": 0,
    "subtotalExclTax": 9000,
    "taxBreakdown": [
      {
        "categoryCode": "ZB",
        "exemptionReason": "Franchise art. 293 B CGI",
        "rate": 0,
        "taxAmount": 0,
        "taxableAmount": 9500,
      },
    ],
    "totalExclTax": 9500,
    "totalInclTax": 9500,
    "totalPaid": 9500,
    "totalTax": 0,
  },
  "voidedInfo": null,
}
`;
